--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MoneyManager">
-        <activity
-            android:name=".ThuChi"
-            android:label="@string/title_activity_main2"
-            android:theme="@style/Theme.MoneyManager.NoActionBar"></activity>
+        <activity android:name=".ThuChi"/>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
