--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MoneyManager">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         <activity android:name=".Login"></activity>
         <activity android:name=".MainActivity">
             android:theme="@style/AppTheme.NoActionBar">
