--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MoneyManager">
-        <activity android:name=".Fragment.ViTien.Edit_ViTien"></activity>
+        <activity android:name=".Edit_ViTien"></activity>
         <activity android:name=".ResetPassword" />
         <activity android:name=".Them_ViTien" />
         <activity android:name=".Them_ThuChi" />
         <activity android:name=".Login" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Edit_Thu"></activity>
+        <activity android:name=".Edit_Chi"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Init">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +25,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".Registration" />
-        <activity android:name=".Init" />
     </application>
 
 </manifest>
